build/k8s/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: go-api-pgsql-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: go-api-pgsql-qa
---
apiVersion: v1
kind: Namespace
metadata:
  name: go-api-pgsql-prd
