build/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: go-api-pgsql
  namespace: go-api-pgsql-dev
  labels:
    app: go-api-pgsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-api-pgsql
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: go-api-pgsql
        deploymentconfig: go-api-pgsql
    spec:
      containers:
        - name: go-api-pgsql-is
          image: >-
            image-registry.openshift-image-registry.svc:5000/go-api-pgsql-dev/go-api-pgsql-is:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
