build/k8s/pgsql_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
  namespace: go-api-pgsql-dev
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: postgresql
  type: ClusterIP
  sessionAffinity: None
